--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Gabor Botzheim Software-Ingenieur
 email: gabor@botzheim.de
 baseurl: "homepage_SWE"
-url: http://www.botzheim.de
+url: https://www.botzheim.de
 description: "Portfolio Webseite."
 keywords: "SW,Entwickung,C++,Java,Qt,Qml,Requirements"
 skills: "Software Entwicklung - Requirements Engineering - Management"
@@ -43,7 +43,7 @@ address:
   - line: München, 81735
 
 # Credits content
-credits: ''
+credits: <a href="impressum.html">Impressum</a>
 
 # Build settings
 markdown: kramdown
