--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,31 @@
 # Site settings
-title: Gabor Botzheim Software-Ingenieur
+title: Gabor Botzheim Software-Engineer
+title_de: Gabor Botzheim Software-Ingenieur
 email: gabor@botzheim.de
 baseurl: "homepage_SWE"
 url: https://www.botzheim.de
-description: "Portfolio Webseite."
-keywords: "SW,Entwickung,C++,Java,Qt,Qml,Requirements"
-skills: "Software Entwicklung - Requirements Engineering - Management"
+description: "Portfolio Website"
+description_de: "Portfolio Webseite."
+keywords: "SW,Development,C++,Java,Qt,Qml,Requirements"
+keywords_de: "SW,Entwickung,C++,Java,Qt,Qml,Requirements"
+skills: "Software Development - Requirements Engineering - Management"
+skills_de: "Software Entwicklung - Requirements Engineering - Management"
+about: "About"
+about_de: "Über mich"
+contact: "Contact"
+contact_de: "Kontakt"
+about_me1: "I am a self-employed Software Engineer, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
+          Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
+          Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche."
+about_me1_de: "Ich bin ein Freiberuflicher Software Ingenieur, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
+          Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
+          Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche."
+about_me2: "My strong side in software development liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
+         und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
+         Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. "          
+about_me2_de: "In der Software-Entwicklung liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
+         und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
+         Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. "
 meta_author: Botzheim Gabor
 
 # Google webmaster tools
@@ -34,7 +54,7 @@ color:
 # Footer settings
 footer:
   copyright: Gabor Botzheim
-  location: Budapest, Wien, München
+  location: München, Wien, Budapest
   credits: Credits
 
 # Postal address (add as many lines as necessary)
