--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ skills: "Software Development - Requirements Engineering - Management"
 skills_de: "Software Entwicklung - Requirements Engineering - Management"
 about: "About"
 about_de: "Über mich"
-contact: "Contact"
-contact_de: "Kontakt"
+contact_title: "Contact"
+contact_title_de: "Kontakt"
 about_me1: "I am a self-employed Software Engineer, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
           Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
           Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche."
@@ -26,6 +26,12 @@ about_me2: "My strong side in software development liegen meine Stärken bei C++
 about_me2_de: "In der Software-Entwicklung liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
          und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
          Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. "
+email_send: "Send"
+email_send_de: "Senden"
+email_address: "Email Address"
+email_address_de: "Email-Adresse"
+email_message: "Message"
+email_message_de: "Nachricht"
 meta_author: Botzheim Gabor
 
 # Google webmaster tools
