fixed more translations

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ email_address: "Email Address"
 email_address_de: "Email-Adresse"
 email_message: "Message"
 email_message_de: "Nachricht"
+email_contact: "Contact Me"
+email_contact_de: "Kontaktieren"
 meta_author: Botzheim Gabor
 
 # Google webmaster tools
