added english translations

--- a/_config.yml
+++ b/_config.yml
@@ -14,15 +14,15 @@ about: "About"
 about_de: "Über mich"
 contact_title: "Contact"
 contact_title_de: "Kontakt"
-about_me1: "I am a self-employed Software Engineer, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
-          Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
-          Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche."
+about_me1: "I am a self-employed Software Engineer, focusing on software development, requirements engineering and management.
+          I have gathered the most experience until now in the aerospace industry, both in the civil and the military area.
+          I furthermore had noteworthy projects in the automotive, meditech and geodesic industry."
 about_me1_de: "Ich bin ein Freiberuflicher Software Ingenieur, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
           Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
           Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche."
-about_me2: "My strong side in software development liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
-         und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
-         Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. "          
+about_me2: "My strong side in software development is embedded C++, Java, Qt development with knowledge of numerous frameworks. I am able to work productive both in single or multinational team projects 
+         and I readily bring in and distribute my knowledge. Through my experience in leadership positions, I understand, and can act well as a mediator between two worlds. 
+         In requirements engineering, my experience from both perspectives helps to create efficient and good requirements. "          
 about_me2_de: "In der Software-Entwicklung liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
          und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
          Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. "
